--- a/src/app/heroes/component/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/heroes/component/heroe-tarjeta/heroe-tarjeta.component.html
@@ -4,7 +4,7 @@
       {{ heroe.superhero }}
     </mat-card-title>
     <mat-card-subtitle>
-      {{ heroe.alt_image }}
+      {{ heroe.alter_ego }}
     </mat-card-subtitle>
   </mat-card-header>
 
