--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,62 @@
-<p>agregar works!</p>
+<h2>
+  {{ accion }} superheroe: <span>{{ heroe.superhero }}</span>
+</h2>
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+  <div fxFlex="50" fxLayout="column">
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="40px">
+      <mat-form-field fxFlex="100" fxLayout.xs="column">
+        <mat-label> Super Heroe </mat-label>
+        <input matInput type="text" [(ngModel)]="heroe.superhero" required />
+      </mat-form-field>
+      <mat-form-field fxFlex="100">
+        <mat-label> After Ego </mat-label>
+        <input matInput type="text" [(ngModel)]="heroe.alter_ego" required />
+      </mat-form-field>
+    </div>
+    <mat-form-field>
+      <mat-label> Primera Aparición </mat-label>
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="heroe.first_appearance"
+        required
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label> Personajes </mat-label>
+      <input matInput type="text" [(ngModel)]="heroe.characters" required />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label> Creador </mat-label>
+      <mat-select [(ngModel)]="heroe.publisher">
+        <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
+          {{ publisher.description }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label> Foto URL </mat-label>
+      <input matInput type="url" [(ngModel)]="heroe.alt_image" required />
+    </mat-form-field>
+    <br />
+    <div fxLayout>
+      <button mat-raised-button color="primary" (click)="guardar()">
+        <mat-icon>edit</mat-icon>
+        {{ heroe.id ? "Actualizar" : "Nuevo" }}
+      </button>
+      <span class="spacer"></span>
+      <button
+        *ngIf="heroe.id"
+        mat-raised-button
+        color="warn"
+        (click)="eliminar()"
+      >
+        <mat-icon>remove</mat-icon>
+        Borrar
+      </button>
+    </div>
+  </div>
+  <div fxFlex="50">
+    <img class="image_heroe" [src]="heroe | imagen" />
+  </div>
+</div>
