--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer{
   flex: 1 1 auto;
 }
+
+.image_heroe {
+  width: 100%;
+  border-radius: 10px;
+}
