--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -33,7 +33,8 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="spacer"></span>
-    <button mat-button>Cerrar Sesión</button>
+    <span>{{auth.usuario}}</span>
+    <button mat-button (click)="logout()">Cerrar Sesión</button>
   </mat-toolbar>
 
   <div class="container">
